--- a/ex4_lr/exercise_04_linear_regression.ipynb
+++ b/ex4_lr/exercise_04_linear_regression.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2064, 9) (18576, 9) (18576,) (2064,)\n"
+     ]
+    }
+   ],
    "source": [
     "X , y = fetch_california_housing(return_X_y=True)\n",
     "\n",
@@ -71,7 +79,25 @@
     "\n",
     "# Split into train and test\n",
     "test_size = 0.9\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size)\n",
+    "print(X_train.shape, X_test.shape, y_test.shape, y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.518   1.53    2.574   ... 5.00001 2.38    1.158  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_train)"
    ]
   },
   {
@@ -83,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +127,11 @@
     "    -------\n",
     "    w : array, shape [D]\n",
     "        Optimal regression coefficients (w[0] is the bias term).\n",
+    "\n",
     "        \n",
     "    \"\"\"\n",
-    "    ### YOUR CODE HERE ###"
+    "    ### YOUR CODE HERE ###\n",
+    "    return np.linalg.pinv(X) @ y"
    ]
   },
   {
@@ -115,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +165,9 @@
     "        Optimal regression coefficients (w[0] is the bias term).\n",
     "    \n",
     "    \"\"\"\n",
-    "    ### YOUR CODE HERE ###"
+    "    ### YOUR CODE HERE ###\n",
+    "    #print(X.shape, y.shape, np.linalg.inv(X.T @ X + reg_strength * np.identity(X.shape[1]) ).shape)\n",
+    "    return np.linalg.inv(X.T @ X + reg_strength * np.identity(X.shape[1]) ) @ X.T @ y"
    ]
   },
   {
@@ -149,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +199,8 @@
     "        Predicted regression targets for the input data.\n",
     "        \n",
     "    \"\"\"\n",
-    "    ### YOUR CODE HERE ###"
+    "    ### YOUR CODE HERE ###\n",
+    "    return X @ w"
    ]
   },
   {
@@ -181,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +234,8 @@
     "        Mean squared error.\n",
     "        \n",
     "    \"\"\"\n",
-    "    ### YOUR CODE HERE ###"
+    "    ### YOUR CODE HERE ###\n",
+    "    return np.mean((y_pred - y_true)**2)"
    ]
   },
   {
@@ -226,9 +258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE for Least squares = 0.5347102426013298\n",
+      "MSE for Ridge regression = 0.5331285867786225\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the data\n",
     "np.random.seed(1234)\n",
@@ -250,11 +291,25 @@
     "mse_ridge = mean_squared_error(y_test, y_pred_ridge)\n",
     "print('MSE for Ridge regression = {0}'.format(mse_ridge))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mlgs",
    "language": "python",
    "name": "python3"
   },
@@ -268,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.10.11"
   },
   "toc": {
    "colors": {
@@ -293,6 +348,11 @@
    "toc_section_display": "block",
    "toc_window_display": false,
    "widenNotebook": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "96b7b0d329cf5683ac1ca3c55435cf7af1bfbb9612e6ddb0d4fb90ac355a0d69"
+   }
   }
  },
  "nbformat": 4,
