--- a/ex4_lr/exercise_solution_04_linear_regression.ipynb
+++ b/ex4_lr/exercise_solution_04_linear_regression.ipynb
@@ -280,7 +280,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mlgs",
    "language": "python",
    "name": "python3"
   },
@@ -294,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.10.11 (main, May 16 2023, 00:28:57) [GCC 11.2.0]"
   },
   "toc": {
    "colors": {
@@ -319,6 +319,11 @@
    "toc_section_display": "block",
    "toc_window_display": false,
    "widenNotebook": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "96b7b0d329cf5683ac1ca3c55435cf7af1bfbb9612e6ddb0d4fb90ac355a0d69"
+   }
   }
  },
  "nbformat": 4,
