--- a/ex10_dr/exercise_10_notebook.ipynb
+++ b/ex10_dr/exercise_10_notebook.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
@@ -341,12 +341,12 @@
     "    reduced_M = np.dot(M,  VT.T)\n",
     "    print(reduced_M.shape)\n",
     "    \n",
-    "    return "
+    "    return reduced_M "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -367,10 +367,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.90211303]\n",
+      " [-6.68109819]\n",
+      " [-1.05146222]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(M_t)"
+   ]
   },
   {
    "cell_type": "code",
