ex 11: dr, alternating optim and sgd for svd decomposition

--- a/ex11_dr2/exercise_11_notebook.ipynb
+++ b/ex11_dr2/exercise_11_notebook.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,6 +222,10 @@
     "    # TODO: Compute the modified matrix and user_means\n",
     "    \n",
     "    ## BEGIN SOLUTION\n",
+    "    user_means = np.mean(matrix, axis=1)\n",
+    "    \n",
+    "\n",
+    "    matrix = matrix - user_means\n",
     "\n",
     "    ## END SOLUTION\n",
     "    \n",
@@ -309,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +325,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 4, 4, 4, 1, 4, 1, 3, 4, 3, 2, 4, 4, 5, 4, 3, 5, 2, 5, 3, 5, 1,\n",
+       "       2, 5, 4, 4, 5, 4, 2, 3, 4, 3, 5, 4, 4, 4, 5, 3, 1, 4, 5, 4, 2, 4,\n",
+       "       4, 5, 5, 4, 4, 1, 5, 5, 5, 4, 5, 4, 3, 4, 5, 3, 2, 4, 3, 5, 3, 4,\n",
+       "       4, 3, 4, 3, 2, 3, 5, 3, 4, 4, 5, 5, 5, 4, 4, 4, 5, 5, 4, 4, 4, 3,\n",
+       "       4, 4, 1, 4, 5, 2, 4, 1, 4, 4, 3, 5, 5, 3, 5, 2, 3, 3, 3, 4, 3, 4,\n",
+       "       5, 5, 2, 5, 3, 3, 4, 5, 5, 4, 4, 4, 4, 2, 3, 5, 3, 3, 2, 5, 5, 3,\n",
+       "       3, 4, 5, 1, 5, 5, 3, 4, 3, 4, 4, 2, 1, 5, 1, 4, 5, 3, 5, 5, 5, 4,\n",
+       "       4, 5, 3, 4, 3, 3, 5, 4, 4, 4, 4, 5, 4, 3, 1, 5, 5, 4, 5, 5, 2, 5,\n",
+       "       4, 3, 4, 4, 1, 4, 4, 5, 4, 5, 5, 4, 4, 4, 5, 5, 5, 3, 5, 5, 1, 2,\n",
+       "       3, 1])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R[test_idx].A1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,8 +453,16 @@
     "        The initialized matrix P of a latent factor model.\n",
     "    \"\"\"\n",
     "    np.random.seed(0)\n",
-    "    \n",
-    "    # TODO: Compute Q and P\n",
+    "    if init == 'random':\n",
+    "        Q =  np.random.random((matrix.shape[0], k))\n",
+    "        P = np.random.random((k, matrix.shape[1]))\n",
+    "    elif init == 'svd':\n",
+    "        U, s, V = svds(matrix, k = k)\n",
+    "        S = np.diag(s)\n",
+    "        Q = U @ S\n",
+    "        P = V\n",
+    "\n",
+    "    # # TODO: Compute Q and P\n",
     "    \n",
     "    ## BEGIN SOLUTION\n",
     "\n",
@@ -440,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +565,81 @@
     "    \n",
     "    # TODO: Compute best_Q, best_P, validation_losses, train_losses and converged_after\n",
     " \n",
-    "    ## BEGIN SOLUTION\n",
+    "    nn_mask = sp.coo_matrix( (np.ones(len(non_zero_idx)), \n",
+    "                            (non_zero_idx[:,0], non_zero_idx[:, 1])), \n",
+    "                            dtype='uint8').tocsr()## BEGIN SOLUTION\n",
+    "    \n",
+    "    cols = nn_mask.T.tolil().rows\n",
+    "    rows = nn_mask.tolil().rows\n",
+    "    \n",
+    "    Q, P = initialize_Q_P(R, k, init)\n",
+    "    ridge = Ridge(alpha = reg_lambda, fit_intercept= False)\n",
+    "    \n",
+    "    train_losses = []\n",
+    "    validation_losses = []\n",
+    "    train_idx = tuple(non_zero_idx.T)\n",
+    "    best_val_loss, best_Q, best_P , bef , converged_after = -1, -1, -1, -1, -1\n",
+    "    current_patience = patience \n",
+    "    times = []\n",
+    "    \n",
+    "    for it in range(max_steps):\n",
+    "        \n",
+    "        if bef != -1:\n",
+    "            times.append(time.time() - bef)\n",
+    "        bef = time.time() \n",
+    "        \n",
+    "        \n",
+    "        if it % eval_every == 0:\n",
+    "            train_loss = loss(R[train_idx].A1, train_idx, Q, P, reg_lambda)\n",
+    "            train_losses.append(train_loss)\n",
+    "            \n",
+    "            val_loss = loss(val_values, val_idx, Q, P, reg_lambda)\n",
+    "            validation_losses.append(val_loss)\n",
+    "            \n",
+    "            if best_val_loss < 0 or val_loss < best_val_loss:\n",
+    "                best_val_loss = val_loss\n",
+    "                best_Q = Q\n",
+    "                best_P = P\n",
+    "                current_patience = patience\n",
+    "            else: \n",
+    "                current_patience -= 1\n",
+    "                \n",
+    "            if current_patience == 0:\n",
+    "                converged_after = it - patience * eval_every\n",
+    "                break\n",
+    "            \n",
+    "            print( 'Interation {}, training loss {:.3f}, validation loss {:.3f}'.format(it, train_loss, val_loss))\n",
+    "\n",
+    "             ### general update \n",
+    "        if optimizer == 'als':\n",
+    "            \n",
+    "            for rating_idx in range(R.shape[1]):\n",
+    "                nn_idx = cols[rating_idx]\n",
+    "                reg = ridge.fit(Q[nn_idx], np.squeeze(R[nn_idx, rating_idx]).to_array())\n",
+    "                P[ :, nn_idx] = reg.coef_\n",
+    "            \n",
+    "            for user_idx in range(R.shape[0]):\n",
+    "                nn_idx = rows[user_idx]\n",
+    "                reg = ridge.fit(P[nn_idx], np.squeeze(R[nn_idx, user_idx]).to_array())\n",
+    "                Q[user_idx, :] = reg.coef_\n",
+    "        \n",
+    "            \n",
+    "                \n",
+    "        \n",
+    "        elif optimizer == 'sgd':\n",
+    "            \n",
+    "            sgd_idx =  np.arange(len(train_idx[0]))\n",
+    "            np.random.shuffle(sgd_idx)\n",
+    "            \n",
+    "            for idx in sgd_idx:\n",
+    "                u, i = train_idx[0][idx], train_idx[1][idx]\n",
+    "                e = R[u,i] - Q[u,:] @ P[:, i] # error \n",
+    "                Q[u,:] = Q[u,:] + lr * (e * P[:,i] + reg_lambda * Q[u,:])\n",
+    "                P[:,i] = P[:,i] + lr * (e * Q[u,:] + reg_lambda * P[:,i])\n",
+    "                \n",
+    "    if converged_after == -1 : \n",
+    "        converged_after = bef\n",
+    "    print('Converged after {} seconds'.format(converged_after))\n",
     "   \n",
     "    ## END SOLUTION\n",
     "    \n",
@@ -539,29 +655,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 0, training loss: 96804865.847, validation loss: 125029.703\n",
-      "Iteration 1, training loss: 287580.429, validation loss: 620.547\n",
-      "Iteration 2, training loss: 164611.728, validation loss: 518.469\n",
-      "Iteration 3, training loss: 113535.685, validation loss: 489.704\n",
-      "Iteration 4, training loss: 84477.437, validation loss: 470.566\n",
-      "Iteration 5, training loss: 65036.610, validation loss: 464.640\n",
-      "Iteration 6, training loss: 51687.799, validation loss: 470.806\n",
-      "Iteration 7, training loss: 41796.322, validation loss: 470.562\n",
-      "Iteration 8, training loss: 34171.781, validation loss: 479.404\n",
-      "Iteration 9, training loss: 28487.833, validation loss: 487.408\n",
-      "Iteration 10, training loss: 23805.719, validation loss: 492.171\n",
-      "Iteration 11, training loss: 20095.304, validation loss: 497.112\n",
-      "Iteration 12, training loss: 17139.779, validation loss: 503.008\n",
-      "Iteration 13, training loss: 14754.154, validation loss: 510.140\n",
-      "Iteration 14, training loss: 12786.743, validation loss: 511.673\n",
-      "Converged after 5 iterations, on average 7.097s per iteration\n"
+      "Interation 0, training loss 70986746.831, validation loss 90624.872\n",
+      "Interation 1, training loss 289906.261, validation loss 496.351\n",
+      "Interation 2, training loss 162009.841, validation loss 451.344\n",
+      "Interation 3, training loss 111122.146, validation loss 397.762\n",
+      "Interation 4, training loss 82821.812, validation loss 416.010\n",
+      "Interation 5, training loss 64067.106, validation loss 439.213\n",
+      "Interation 6, training loss 50740.550, validation loss 450.028\n",
+      "Interation 7, training loss 40892.002, validation loss 448.599\n",
+      "Interation 8, training loss 33394.306, validation loss 458.378\n",
+      "Interation 9, training loss 27809.621, validation loss 472.014\n",
+      "Interation 10, training loss 23189.702, validation loss 483.504\n",
+      "Interation 11, training loss 19499.871, validation loss 488.605\n",
+      "Interation 12, training loss 16601.487, validation loss 497.285\n",
+      "Interation 13, training loss 14190.619, validation loss 509.379\n",
+      "Interation 14, training loss 12269.632, validation loss 509.466\n",
+      "Interation 15, training loss 10640.452, validation loss 515.235\n",
+      "Interation 16, training loss 9329.069, validation loss 514.749\n",
+      "Interation 17, training loss 8175.680, validation loss 522.668\n",
+      "Interation 18, training loss 7259.180, validation loss 521.273\n",
+      "Interation 19, training loss 6456.028, validation loss 519.057\n",
+      "Interation 20, training loss 5746.324, validation loss 524.035\n",
+      "Interation 21, training loss 5136.004, validation loss 525.630\n",
+      "Interation 22, training loss 4611.509, validation loss 526.065\n",
+      "Interation 23, training loss 4178.679, validation loss 523.884\n",
+      "Interation 24, training loss 3792.469, validation loss 529.870\n",
+      "Interation 25, training loss 3416.850, validation loss 531.379\n",
+      "Interation 26, training loss 3120.906, validation loss 532.176\n",
+      "Interation 27, training loss 2861.283, validation loss 535.593\n",
+      "Interation 28, training loss 2606.849, validation loss 534.335\n",
+      "Interation 29, training loss 2378.370, validation loss 537.217\n",
+      "Interation 30, training loss 2193.468, validation loss 538.136\n",
+      "Interation 31, training loss 2019.566, validation loss 537.074\n",
+      "Interation 32, training loss 1856.313, validation loss 538.232\n",
+      "Interation 33, training loss 1711.983, validation loss 538.630\n",
+      "Interation 34, training loss 1598.885, validation loss 536.689\n",
+      "Interation 35, training loss 1470.537, validation loss 538.578\n",
+      "Interation 36, training loss 1363.790, validation loss 539.173\n",
+      "Interation 37, training loss 1267.909, validation loss 540.171\n",
+      "Interation 38, training loss 1176.996, validation loss 540.762\n",
+      "Interation 39, training loss 1104.220, validation loss 541.024\n",
+      "Interation 40, training loss 1017.676, validation loss 541.846\n",
+      "Interation 41, training loss 956.464, validation loss 541.741\n",
+      "Interation 42, training loss 893.522, validation loss 541.508\n",
+      "Interation 43, training loss 831.460, validation loss 542.484\n",
+      "Interation 44, training loss 778.442, validation loss 542.049\n",
+      "Interation 45, training loss 727.818, validation loss 542.218\n",
+      "Interation 46, training loss 687.613, validation loss 542.953\n",
+      "Interation 47, training loss 642.656, validation loss 542.964\n",
+      "Interation 48, training loss 604.183, validation loss 542.552\n",
+      "Interation 49, training loss 565.376, validation loss 542.878\n",
+      "Interation 50, training loss 536.069, validation loss 542.785\n",
+      "Interation 51, training loss 500.846, validation loss 542.765\n",
+      "Interation 52, training loss 472.660, validation loss 543.817\n",
+      "Interation 53, training loss 449.050, validation loss 544.655\n",
+      "Interation 54, training loss 420.935, validation loss 543.371\n",
+      "Interation 55, training loss 397.865, validation loss 543.384\n",
+      "Interation 56, training loss 378.043, validation loss 543.834\n",
+      "Interation 57, training loss 354.695, validation loss 543.172\n",
+      "Interation 58, training loss 335.173, validation loss 543.550\n",
+      "Interation 59, training loss 316.607, validation loss 542.947\n",
+      "Interation 60, training loss 301.230, validation loss 543.415\n",
+      "Interation 61, training loss 283.152, validation loss 544.115\n",
+      "Interation 62, training loss 269.121, validation loss 543.863\n",
+      "Interation 63, training loss 254.730, validation loss 544.142\n",
+      "Interation 64, training loss 241.754, validation loss 544.130\n",
+      "Interation 65, training loss 229.959, validation loss 544.499\n",
+      "Interation 66, training loss 219.886, validation loss 543.843\n",
+      "Interation 67, training loss 206.664, validation loss 544.185\n",
+      "Interation 68, training loss 197.697, validation loss 544.205\n",
+      "Interation 69, training loss 186.654, validation loss 544.709\n",
+      "Interation 70, training loss 178.710, validation loss 544.471\n",
+      "Interation 71, training loss 170.483, validation loss 544.428\n",
+      "Interation 72, training loss 163.097, validation loss 544.401\n",
+      "Interation 73, training loss 153.741, validation loss 544.874\n",
+      "Interation 74, training loss 147.214, validation loss 544.449\n",
+      "Interation 75, training loss 141.687, validation loss 544.604\n",
+      "Interation 76, training loss 134.017, validation loss 544.586\n",
+      "Interation 77, training loss 128.012, validation loss 544.340\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/alina/Desktop/MLGS/ML/ex11_dr2/exercise_11_notebook.ipynb Cell 28\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/alina/Desktop/MLGS/ML/ex11_dr2/exercise_11_notebook.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m Q_sgd, P_sgd, val_loss_sgd, train_loss_sgd, converged_sgd \u001b[39m=\u001b[39m latent_factor_alternating_optimization(\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/alina/Desktop/MLGS/ML/ex11_dr2/exercise_11_notebook.ipynb#X35sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     R_shifted, nonzero_indices, k\u001b[39m=\u001b[39;49m\u001b[39m100\u001b[39;49m, val_idx\u001b[39m=\u001b[39;49mval_idx, val_values\u001b[39m=\u001b[39;49mval_values_shifted, \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/alina/Desktop/MLGS/ML/ex11_dr2/exercise_11_notebook.ipynb#X35sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     reg_lambda\u001b[39m=\u001b[39;49m\u001b[39m1e-4\u001b[39;49m, init\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mrandom\u001b[39;49m\u001b[39m'\u001b[39;49m, max_steps\u001b[39m=\u001b[39;49m\u001b[39m100\u001b[39;49m, patience\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m, optimizer\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39msgd\u001b[39;49m\u001b[39m'\u001b[39;49m, lr\u001b[39m=\u001b[39;49m\u001b[39m1e-2\u001b[39;49m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/alina/Desktop/MLGS/ML/ex11_dr2/exercise_11_notebook.ipynb#X35sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m )\n",
+      "\u001b[1;32m/Users/alina/Desktop/MLGS/ML/ex11_dr2/exercise_11_notebook.ipynb Cell 28\u001b[0m line \u001b[0;36m1\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/alina/Desktop/MLGS/ML/ex11_dr2/exercise_11_notebook.ipynb#X35sZmlsZQ%3D%3D?line=147'>148</a>\u001b[0m             e \u001b[39m=\u001b[39m R[u,i] \u001b[39m-\u001b[39m Q[u,:] \u001b[39m@\u001b[39m P[:, i] \u001b[39m# error \u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/alina/Desktop/MLGS/ML/ex11_dr2/exercise_11_notebook.ipynb#X35sZmlsZQ%3D%3D?line=148'>149</a>\u001b[0m             Q[u,:] \u001b[39m=\u001b[39m Q[u,:] \u001b[39m+\u001b[39m lr \u001b[39m*\u001b[39m (e \u001b[39m*\u001b[39m P[:,i] \u001b[39m+\u001b[39m reg_lambda \u001b[39m*\u001b[39m Q[u,:])\n\u001b[0;32m--> <a href='vscode-notebook-cell:/Users/alina/Desktop/MLGS/ML/ex11_dr2/exercise_11_notebook.ipynb#X35sZmlsZQ%3D%3D?line=149'>150</a>\u001b[0m             P[:,i] \u001b[39m=\u001b[39m P[:,i] \u001b[39m+\u001b[39m lr \u001b[39m*\u001b[39m (e \u001b[39m*\u001b[39m Q[u,:] \u001b[39m+\u001b[39m reg_lambda \u001b[39m*\u001b[39m P[:,i])\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/alina/Desktop/MLGS/ML/ex11_dr2/exercise_11_notebook.ipynb#X35sZmlsZQ%3D%3D?line=151'>152</a>\u001b[0m \u001b[39mif\u001b[39;00m converged_after \u001b[39m==\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m : \n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/alina/Desktop/MLGS/ML/ex11_dr2/exercise_11_notebook.ipynb#X35sZmlsZQ%3D%3D?line=152'>153</a>\u001b[0m     converged_after \u001b[39m=\u001b[39m bef\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -1539,7 +1729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
